@slidy/core - format & build easing

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -138,7 +138,7 @@
                 <li id="2"><img src="https://picsum.photos/id/12/1280/800.jpg" alt="alt" /></li>
                 <li id="3"><img src="https://picsum.photos/id/13/1280/800.jpg" alt="alt" /></li>
                 <li id="4"><img src="https://picsum.photos/id/14/1280/800.jpg" alt="alt" /></li> -->
-                <!-- <li style="display: grid; place-items: center">Loading... 🚀</li> -->
+                <li style="display: grid; place-items: center">Loading... 🚀</li>
             </ul>
         </main>
 
