--- a/_v2/www/public/index.html
+++ b/_v2/www/public/index.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-        <title>SLIDY - simple, configurable & reusable carousel action script built with TS with tamplates</title>
+        <title>
+            SLIDY - simple, configurable & reusable carousel action script built with TS with
+            tamplates
+        </title>
 
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" type="text/css" href="norm.min.css" />
