--- a/packages/malina/public/index.html
+++ b/packages/malina/public/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
-        <link rel="shortcut icon" type="image/png" href="/favicon.png">
-        <link rel='stylesheet' href='/bundle.css'>
+        <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+        <link rel="stylesheet" href="/bundle.css" />
 
         <title>Slidy 3.0 - MalinaJS</title>
 
-        <script defer src='/bundle.js'></script>
+        <script defer src="/bundle.js"></script>
     </head>
 
     <body />
-
 </html>
