--- a/packages/wc/dev/index.html
+++ b/packages/wc/dev/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto"
+        />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
 
-        <link rel="apple-touch-icon" type="image/png" sizes="any" href="/apple-touch-icon.png">
-        <link rel="apple-touch-icon-precomposed" type="image/png" sizes="any" href="/apple-touch-icon-precomposed.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="any" href="/apple-touch-icon.png" />
+        <link
+            rel="apple-touch-icon-precomposed"
+            type="image/png"
+            sizes="any"
+            href="/apple-touch-icon-precomposed.png"
+        />
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="dev.css" />
         <link rel="stylesheet" href="slidy.css" />
@@ -49,19 +55,23 @@
 
             const events = ['mount', 'move', 'resize', 'update', 'destroy'];
 
-            events.forEach(event => {
+            events.forEach((event) => {
                 node.addEventListener(event, (e) => {
                     switch (event) {
                         case 'mount':
                             options = e.detail.options;
                             for (const button of document.querySelectorAll('button')) {
-                                if (options[button.id] || (button.id === 'dark' && media.dark)) button.classList.add('active');
+                                if (options[button.id] || (button.id === 'dark' && media.dark))
+                                    button.classList.add('active');
                             }
                             for (const input of document.querySelectorAll('input')) {
                                 if (input.name in options) input.value = options[input.name];
-                                else if (input.name === 'width') input.value = utils.getVar(main, '--width');
-                                else if (input.name === 'height') input.value = utils.getVar(main, '--height');
-                                else if (input.name === 'gap') input.value = utils.getVar(main, '--gap');
+                                else if (input.name === 'width')
+                                    input.value = utils.getVar(main, '--width');
+                                else if (input.name === 'height')
+                                    input.value = utils.getVar(main, '--height');
+                                else if (input.name === 'gap')
+                                    input.value = utils.getVar(main, '--gap');
                                 else if (input.name === 'index') input.max = options.length - 1;
                             }
                             snap.value = options.snap;
@@ -86,13 +96,17 @@
     <body>
         <header>
             <img alt="Slidy" width="50" height="50" src="favicon.png" />
-            <h3>
-                Slidy <span>3.1.3</span><sub>nativeJS</sub><sub id="stats" />
-            </h3>
+            <h3>Slidy <span>3.1.3</span><sub>nativeJS</sub><sub id="stats" /></h3>
             <button id="dark" onclick="activate(this, dark)">dark</button>
         </header>
         <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
-            <slidy-wc id="node" tabindex="0" itemWidth="var(--width)" height="350px" space="var(--gap)">
+            <slidy-wc
+                id="node"
+                tabindex="0"
+                itemWidth="var(--width)"
+                height="350px"
+                space="var(--gap)"
+            >
                 <img id="0" src="https://picsum.photos/id/10/1280/800.jpg" alt="alt" />
                 <img id="1" src="https://picsum.photos/id/11/1280/800.jpg" alt="alt" />
                 <img id="2" src="https://picsum.photos/id/12/1280/800.jpg" alt="alt" />
@@ -105,10 +119,17 @@
 
         <footer>
             <nav id="buttons">
-                <button id="clamp" onclick="slidy.update({clamp: activate(this, options.clamp)})">clamp</button>
+                <button id="clamp" onclick="slidy.update({clamp: activate(this, options.clamp)})">
+                    clamp
+                </button>
                 <!-- <button id="snap" onclick="slidy.update({snap: activate(this, options.snap)})">snap</button> -->
-                <button id="loop" onclick="slidy.update({loop: activate(this, options.loop)})">loop</button>
-                <button id="vertical" onclick="slidy.update({vertical: activate(this, options.vertical)})">
+                <button id="loop" onclick="slidy.update({loop: activate(this, options.loop)})">
+                    loop
+                </button>
+                <button
+                    id="vertical"
+                    onclick="slidy.update({vertical: activate(this, options.vertical)})"
+                >
                     vertical
                 </button>
             </nav>
@@ -126,25 +147,54 @@
             <form>
                 <fieldset>
                     <label title="length">
-                        <input onchange="changeValue()" name="length" type="number" size="1" step="1" min="1"
-                            max="50" />
+                        <input
+                            onchange="changeValue()"
+                            name="length"
+                            type="number"
+                            size="1"
+                            step="1"
+                            min="1"
+                            max="50"
+                        />
                     </label>
                     <label title="width">
-                        <input onchange="setVar(main, this.name, this.value)" name="width" size="5" />
+                        <input
+                            onchange="setVar(main, this.name, this.value)"
+                            name="width"
+                            size="5"
+                        />
                     </label>
                     <label title="height">
-                        <input onchange="setVar(main, this.name, this.value)" name="height" size="5" />
+                        <input
+                            onchange="setVar(main, this.name, this.value)"
+                            name="height"
+                            size="5"
+                        />
                     </label>
                     <label title="gap">
                         <input onchange="setVar(main, this.name, this.value)" name="gap" size="5" />
                     </label>
                     <label title="duration">
-                        <input onchange="changeValue()" name="duration" type="number" size="2" step="1" min="100"
-                            max="1000" />
+                        <input
+                            onchange="changeValue()"
+                            name="duration"
+                            type="number"
+                            size="2"
+                            step="1"
+                            min="100"
+                            max="1000"
+                        />
                     </label>
                     <label title="gravity">
-                        <input onchange="changeValue()" name="gravity" type="number" size="1" step="0.1" min="0.1"
-                            max="2" />
+                        <input
+                            onchange="changeValue()"
+                            name="gravity"
+                            type="number"
+                            size="1"
+                            step="0.1"
+                            min="0.1"
+                            max="2"
+                        />
                     </label>
                     <label title="align">
                         <select value="center" name="snap" onchange="changeValue()">
@@ -162,13 +212,14 @@
             <h1>HTML Ipsum Presents</h1>
 
             <p>
-                <strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis
-                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero
-                sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.
-                Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
-                <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum,
-                eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis
-                pulvinar facilisis. Ut felis.
+                <strong>Pellentesque habitant morbi tristique</strong> senectus et netus et
+                malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies
+                eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
+                <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit
+                amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
+                <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget
+                tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
+                <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.
             </p>
 
             <h2>Header Level 2</h2>
@@ -180,10 +231,10 @@
 
             <blockquote>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet
-                    congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis
-                    mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare
-                    est.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in
+                    mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur
+                    massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus,
+                    at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
                 </p>
             </blockquote>
 
@@ -203,5 +254,4 @@
             </code></pre>
         </article>
     </body>
-
 </html>
