--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -244,6 +244,17 @@
 
             <form>
                 <fieldset>
+                    <label title="step">
+                        <input
+                            onchange="utils.changeValue(this, options)"
+                            name="step"
+                            type="number"
+                            size="1"
+                            step="1"
+                            min="1"
+                            max="3"
+                        />
+                    </label>
                     <label title="indent">
                         <input
                             onchange="utils.changeValue(this, options)"
