@slidy/core - improve cross-wheel/scroll event

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -170,12 +170,11 @@
             <form>
                 <fieldset>
                     <label title="snap">
-                        <select id="snap" name="snap" onchange="slidy.update({ snap: this.value })">
-                        </select>
+                        <select id="snap" name="snap" onchange="slidy.update({ snap: this.value })"></select>
                     </label>
                     <label title="easing">
-                        <select id="easing" name="easing" onchange="slidy.update({ easing: easings[this.value] })">
-                        </select>
+                        <select id="easing" name="easing"
+                            onchange="slidy.update({ easing: easings[this.value] })"></select>
                     </label>
                 </fieldset>
             </form>
