--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -87,7 +87,7 @@
                 clamp: 0,
                 indent: 1,
                 length: 9,
-                sensity: 1,
+                sensity: 0,
                 gravity: 1.2,
                 duration: 375,
                 loop: false,
@@ -182,23 +182,23 @@
 
             <form>
                 <fieldset>
-                    <label title="clamp">
+                    <label title="clamp">clamp
                         <input id="clamp" onchange="slidy.update({ clamp: +this.value })" name="clamp" type="number"
                             size="1" step="1" min="0" max="3" />
                     </label>
-                    <label title="sensity">
+                    <label title="sensity">sensity
                         <input id="sensity" onchange="slidy.update({ sensity: +this.value })" name="sensity"
                             type="number" size="2" step="1" min="0" max="100" />
                     </label>
-                    <label title="indent">
+                    <label title="indent">indent
                         <input id="indent" onchange="slidy.update({ indent: +this.value })" name="indent" type="number"
                             size="1" step="0.1" min="-2" max="2" />
                     </label>
-                    <label title="duration">
+                    <label title="duration">duration
                         <input id="duration" onchange="slidy.update({ duration: +this.value })" name="duration"
                             type="number" size="2" step="1" min="100" max="1000" />
                     </label>
-                    <label title="gravity">
+                    <label title="gravity">gravity
                         <input id="gravity" onchange="slidy.update({ gravity: +this.value })" name="gravity"
                             type="number" size="1" step="0.1" min="0.1" max="2" />
                     </label>
@@ -207,17 +207,17 @@
 
             <form>
                 <fieldset>
-                    <label title="length">
+                    <label title="length">length
                         <input id="length" onchange="utils.changeLength(this)" name="length" type="number" size="1"
                             step="1" min="1" max="50" />
                     </label>
-                    <label title="width">
+                    <label title="width">width
                         <input onchange="utils.setVar(this)" name="width" size="4" />
                     </label>
-                    <label title="height">
+                    <label title="height">height
                         <input onchange="utils.setVar(this)" name="height" size="5" />
                     </label>
-                    <label title="gap">
+                    <label title="gap">gap
                         <input onchange="utils.setVar(this)" name="gap" size="4" />
                     </label>
                 </fieldset>
